# zocli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
Formula/: zocli.rb
scripts/: generate-homebrew-formula.sh  generate-winget-manifests.sh  install.ps1  install.sh  package-release.sh  smoke-product-surface.sh
skills/zocli-calendar/: SKILL.md
skills/zocli-daily-briefing/: SKILL.md
skills/zocli-drive/: SKILL.md
skills/zocli-find-and-read/: SKILL.md
skills/zocli-mail/: SKILL.md
skills/zocli-reply-with-context/: SKILL.md
skills/zocli-shared/: SKILL.md
src/: account_store.rs  calendar.rs  cli.rs  commands.rs  credential_store.rs  disk.rs  error.rs  lib.rs  mail.rs  main.rs  model.rs  oauth.rs  output.rs  paths.rs  persist.rs  runtime_context.rs  update.rs
src/mcp/: dashboard_app.html  install.rs  mod.rs  prompts.rs  server.rs  skills.rs
tests/: cli.rs  mcp_browser.rs  mcp_cli.rs  mcp_http.rs  mcp_server.rs  release_surface.rs
tests/browser_harness/: host.html  mod.rs
