[package]
name = "zocli"
version = "0.2.3"
edition = "2024"
license = "MIT"
repository = "https://github.com/NextStat/zocli"
rust-version = "1.85"
description = "CLI and MCP Apps server for Zoho Mail, Calendar, and WorkDrive for humans and AI agents"

[workspace]
members = []

[dependencies]
axum = "0.8"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.15"
thiserror = "2.0"
tokio = { version = "1.50", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "0.8"
url = "2.5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
flate2 = "1.1"
self-replace = "1.5.0"
tar = "0.4"
zip = { version = "2.4", default-features = false, features = ["deflate"] }
mime_guess = "2.0"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["sync-secret-service"] }

[dev-dependencies]
assert_cmd = "2.0"
mockito = "1.7"
predicates = "3.1"
